--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,7 @@ Repository = "https://github.com/example/milky-python-sdk"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["milky"]
+
