--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 name = "milky-python-sdk"
-version = "0.2.2"
+version = "0.3.0"
 description = "Python SDK for Milky Protocol"
 readme = "README.md"
 requires-python = ">=3.11"
 authors = [
-    {name = "Milky SDK Contributors"}
+    {name = "notnotype"}
 ]
 dependencies = [
     "httpx",
